<resources>
    <string name="app_name">DataMule</string>

    <!--General Strings -->
    <string name="confirm">Confirm</string>
    <string name="unpair">Unpair</string>
    <string name="cancel">Cancel</string>
    <string name="data_file_prefix">%s_%s.json</string>

    <!--NewUserActivity Strings-->
    <string name="skip_this_step">Skip  this step ></string>

    <!--HomeActivity Strings-->
    <string name="new_user_hey_title">Hey,</string>
    <string name="new_user_title">you\'re new to the app!</string>

    <!--HomeActivity Strings-->
    <string name="menu_button_title">Settings</string>
    <string name="home_no_paired_devices">No paired and/or \nconnected devices found!</string>
    <string name="add_new_pi_button">Add a new Pi</string>

    <!--SettingsActivity Strings-->
    <string name="settings_title">Settings</string>
    <string name="storage_title">Storage</string>
    <string name="storage_delete_cache">Delete Cache</string>
    <string name="storage_total">Total</string>
    <string name="storage_used">Used</string>
    <string name="storage_cache">Cache</string>
    <string name="storage_free">Free</string>
    <string name="settings_push_notifications">Push Notifications</string>
    <string name="settings_change_log">Change Log</string>
    <string name="settings_support">Support</string>
    <string name="settings_auto_transfer">Auto Transfer</string>
    <string name="settings_slider_seconds">Choose the delay of seconds before transferring the data.</string>
    <string name="settings_delay_sec">%d sec.</string>
    <string name="settings_support_phone">Call us</string>
    <string name="settings_support_email">E-mail us</string>
    <string name="settings_total_storage">Total storage: %s</string>
    <string name="settings_ram">available ram: %d MB</string>

    <!--DetailActivity Strings-->
    <string name="detail_text_active">Raspberry Pi is</string>
    <string name="detail_text_active_1">valid and connected</string>
    <string name="detail_text_active_2">invalid or too far away</string>
    <string name="detail_text_sub_1">Ready for Data Transfer!</string>
    <string name="detail_text_sub_2">Data Transfer is not available!</string>
    <string name="detail_no_data">No data saved from this Pi</string>
    <string name="detail_data_available_start">There is </string>
    <string name="detail_data_available_end"> of cached files from this Pi</string>
    <string name="detail_no_data_mb">0 MB</string>
    <string name="detail_auto_transfer">Auto Transfer is turned on\nafter %d seconds</string>
    <string name="detail_auto_transfer_btn">Auto Transfer is ON</string>
    <string name="detail_no_auto_transfer">Auto Transfer is\nturned off</string>
    <string name="detail_data">Data available</string>
    <string name="detail_data_size">%s</string>
    <string name="detail_data_button">Transfer Data</string>
    <string name="detail_data_button_disabled">No Data to Transfer</string>

    <string name="detail_dialog_question">Are you sure you want to\n start the Data Transfer?</string>
    <string name="detail_dialog_question_unpair_pi">Are you sure you want to\n unpair %s?</string>
    <string name="detail_dialog_unpairing">Unpairing..</string>
    <string name="detail_dialog">Transferring data…</string>
    <string name="detail_dialog_bytes">%s / %s</string>
    <string name="detail_dialog_small">The transferred data will be uploaded to
        \n the cloud when the wifi is connected</string>

    <string name="detail_dialog_failed_transfer">Failed to transfer data\nfrom %s</string>
    <string name="detail_dialog_failed_transfer_small">Please try again.</string>

    <string name="detail_dialog_success_transfer">Successfully transferred\n%s of data from\n%s</string>
    <string name="detail_dialog_success_transfer_small">Connect to Wi-Fi for syncing\nthe saved data with cloud</string>

    <string name="detail_dialog_connecting">Connecting…</string>

    <!--SearchPiActivity Strings-->
    <string name="add_pi_title">No Pi\'s Found!</string>
    <string name="add_pi_desc">Try adding one by clicking
        \n\'Search\'</string>
    <string name="nearby_pi_title">%d Raspberry Pi\'s Nearby</string>
    <string name="one_nearby_pi_title">%d Raspberry Pi Nearby</string>
    <string name="searching_title">Searching…</string>
    <string name="nearby_pi_desc">Select to add</string>
    <string name="search_button">Search</string>
    <string name="add_this_pi_button">Add this Pi</string>

    <string name="dialog_pairing">Pairing…</string>
    <string name="dialog_could_not_connect">Could not connect</string>
    <string name="dialog_connected">Successfully connected</string>
    <string name="dialog_sub_1">Please wait…</string>
    <string name="dialog_sub_2">Returning to Home…</string>
    <string name="dialog_sub_3">Try connecting to another Pi…</string>

    <string name="error_no_bluetooth">This device does not support bluetooth!</string>
    <string name="bluetooth_alert_title">Bluetooth is turned off</string>
    <string name="bluetooth_alert_text">Your bluetooth is turned off. Please turn on your bluetooth to continue.</string>
    <string name="bluetooth_alert_positive_button">Turn on</string>
    <string name="bluetooth_alert_negative_button">Go Back</string>

    <!--FontAwesome5 Strings-->
    <!--remove from x till ; -->
    <string name="font_awesome_cog_icon">&#xf013;</string>
    <string name="font_awesome_arrow_icon">&#xf060;</string>
    <string name="font_awesome_arrow2_icon">&#xf0da;</string>
    <string name="font_awesome_phone_icon">&#xf095;</string>
    <string name="font_awesome_email_icon">&#xf0e0;</string>
</resources>
